<resources>
    <string name="PORT_NUMBER">8080</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="access_token">pk.eyJ1IjoiaGFlcnVsbXV0dGFxaW4iLCJhIjoiY2oyam1wYjU2MDAwcDJ4bnFtcTNuYjF0cyJ9.dZKKL4w4CwzG4wAeYdTLjA</string>
    <string name="app_name">Sadix-Gafi</string>
    <string name="app_version">App Version</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="assetType">Asset Type</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="chuck_body_content_truncated">\10\10--- Content truncated ---</string>
    <string name="chuck_body_omitted">(encoded or binary body omitted)</string>
    <string name="chuck_body_unexpected_eof">\10\10--- Unexpected end of content ---</string>
    <string name="chuck_browse_sql_database">Browse SQLite database</string>
    <string name="chuck_clear">Clear</string>
    <string name="chuck_duration">Duration</string>
    <string name="chuck_method">Method</string>
    <string name="chuck_name">Chuck</string>
    <string name="chuck_no">No</string>
    <string name="chuck_notification_title">Recording HTTP activity</string>
    <string name="chuck_overview">Overview</string>
    <string name="chuck_protocol">Protocol</string>
    <string name="chuck_request">Request</string>
    <string name="chuck_request_size">Request size</string>
    <string name="chuck_request_time">Request time</string>
    <string name="chuck_response">Response</string>
    <string name="chuck_response_size">Response size</string>
    <string name="chuck_response_time">Response time</string>
    <string name="chuck_search">Search</string>
    <string name="chuck_share">Share</string>
    <string name="chuck_share_as_curl">Share as curl command</string>
    <string name="chuck_share_as_text">Share as text</string>
    <string name="chuck_ssl">SSL</string>
    <string name="chuck_status">Status</string>
    <string name="chuck_total_size">Total size</string>
    <string name="chuck_url">URL</string>
    <string name="chuck_yes">Yes</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="customer_detail">Customer Detail</string>
    <string name="customer_inspection">Customer Inspection</string>
    <string name="customer_survey">Customer Survey</string>
    <string name="customer_type">Customer Type</string>
    <string name="customer_visit">Customer Visit</string>
    <string name="dashboard_performance_label">Dashboard Performance</string>
    <string name="distribution">Distributor</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\10CONTENT</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fragment_home">Home</string>
    <string name="fragment_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="inspection_criteria">Inspection Criteria</string>
    <string name="isi_disini">Isi disini...</string>
    <string name="item_view_role_description">Tab</string>
    <string name="library_android_database_sqlcipher_author">Zetetic, LLC</string>
    <string name="library_android_database_sqlcipher_authorWebsite">https://www.zetetic.net/sqlcipher/</string>
    <string name="library_android_database_sqlcipher_isOpenSource">true</string>
    <string name="library_android_database_sqlcipher_libraryDescription">Android SQLite API based on SQLCipher</string>
    <string name="library_android_database_sqlcipher_libraryName">SQLCipher for Android</string>
    <string name="library_android_database_sqlcipher_libraryVersion">${clientVersionNumber}</string>
    <string name="library_android_database_sqlcipher_libraryWebsite">https://www.zetetic.net/sqlcipher/</string>
    <string name="library_android_database_sqlcipher_licenseLink">https://www.zetetic.net/sqlcipher/license/</string>
    <string name="library_android_database_sqlcipher_repositoryLink">https://github.com/sqlcipher/android-database-sqlcipher</string>
    <string name="list_customer">List Customer</string>
    <string name="login">Login</string>
    <string name="mapbox_attributionErrorNoBrowser">No web browser installed on device, can\'t open web page.</string>
    <string name="mapbox_attributionTelemetryMessage">You are helping to make OpenStreetMap and Mapbox maps better by contributing anonymous usage data.</string>
    <string name="mapbox_attributionTelemetryNegative">Disagree</string>
    <string name="mapbox_attributionTelemetryNeutral">More info</string>
    <string name="mapbox_attributionTelemetryPositive">Agree</string>
    <string name="mapbox_attributionTelemetryTitle">Make Mapbox Maps Better</string>
    <string name="mapbox_attributionsDialogTitle">Mapbox Maps SDK for Android</string>
    <string name="mapbox_attributionsIconContentDescription">Attribution icon. Activate to show attribution dialog.</string>
    <string name="mapbox_compassContentDescription">Map compass. Activate to reset the map rotation to North.</string>
    <string name="mapbox_mapActionDescription">Showing a Map created with Mapbox. Scroll by dragging two fingers. Zoom by pinching two fingers.</string>
    <string name="mapbox_myLocationViewContentDescription">Location View. This shows your location on the map.</string>
    <string name="mapbox_offline_error_region_definition_invalid">Provided OfflineRegionDefinition doesn\'t fit the world bounds: %s</string>
    <string name="mapbox_plugins_autocomplete_search_hint">Search here</string>
    <string name="mapbox_plugins_cd_exit_place_picker">Exit place picker</string>
    <string name="mapbox_plugins_cd_offline_icon">Offline icon</string>
    <string name="mapbox_plugins_cd_search_back_button">Close Search</string>
    <string name="mapbox_plugins_cd_search_clear_button">Clear Search Query</string>
    <string name="mapbox_plugins_offline_message">Offline - Try again</string>
    <string name="mapbox_plugins_place_picker_not_valid_selection">The selected location isn\'t valid</string>
    <string name="mapbox_plugins_place_picker_toolbar_primary_text">Choose location on map</string>
    <string name="mapbox_plugins_place_picker_toolbar_secondary_text">Pan and zoom to adjust</string>
    <string name="mapbox_snackbar_offline_message">Offline</string>
    <string name="mapbox_style_dark">mapbox://styles/mapbox/dark-v10</string>
    <string name="mapbox_style_light">mapbox://styles/mapbox/light-v10</string>
    <string name="mapbox_style_mapbox_streets">mapbox://styles/mapbox/streets-v11</string>
    <string name="mapbox_style_outdoors">mapbox://styles/mapbox/outdoors-v11</string>
    <string name="mapbox_style_satellite">mapbox://styles/mapbox/satellite-v9</string>
    <string name="mapbox_style_satellite_streets">mapbox://styles/mapbox/satellite-streets-v11</string>
    <string name="mapbox_style_traffic_day">mapbox://styles/mapbox/traffic-day-v2</string>
    <string name="mapbox_style_traffic_night">mapbox://styles/mapbox/traffic-night-v2</string>
    <string name="mapbox_telemetryImproveMap">Improve This Map</string>
    <string name="mapbox_telemetryLink">https://www.mapbox.com/telemetry/</string>
    <string name="mapbox_telemetrySettings">Telemetry Settings</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_hour_selection">Select hour</string>
    <string name="material_hour_suffix">%1$s o\'clock</string>
    <string name="material_minute_selection">Select minutes</string>
    <string name="material_minute_suffix">%1$s minutes</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="material_slider_range_start">Range start,</string>
    <string name="material_timepicker_am">AM</string>
    <string name="material_timepicker_clock_mode_description">Switch to clock mode for the time input.</string>
    <string name="material_timepicker_hour">Hour</string>
    <string name="material_timepicker_minute">Minute</string>
    <string name="material_timepicker_pm">PM</string>
    <string name="material_timepicker_select_time">Select time</string>
    <string name="material_timepicker_text_input_mode_description">Switch to text input mode for the time input.</string>
    <string name="merk">Merk</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_content_description">More than %1$d new notifications</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="password">Password</string>
    <string name="region">Region</string>
    <string name="remember_me">Remember Me</string>
    <string name="server_key">Server Key</string>
    <string name="username">Username</string>
</resources>