<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <RelativeLayout
            android:background="@drawable/bg_top_login"
            android:layout_width="match_parent"
            android:layout_height="350dp">
            
            <ImageView
                android:src="@drawable/app_logo"
                android:layout_width="match_parent"
                android:layout_marginTop="100dp"
                android:layout_height="80dp"/>
        </RelativeLayout>
        
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="-100dp"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username">
            
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="20dp"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/server_key_layout"
            android:layout_marginTop="20dp"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/server_key">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/server_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        
        <CheckBox
            android:id="@+id/remember_me"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/remember_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                android:text="@string/login"
                app:cornerRadius="25dp"
                android:layout_marginStart="26dp"
                android:layout_marginEnd="26dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="23dp"
                android:minHeight="60dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <com.airbnb.lottie.LottieAnimationView
                android:layout_centerInParent="true"
                android:layout_marginBottom="20dp"
                android:id="@+id/progress"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:lottie_autoPlay="true"
                app:lottie_fileName="loading_blue.json"
                app:lottie_loop="true"/>
        </RelativeLayout>

        <TextView
            android:textColor="@color/yellow_200"
            android:id="@+id/textVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:gravity="center"
            android:fontFamily="@font/book"
            android:text="@string/app_version" />

        <TextView
            android:textColor="@color/yellow_200"
            android:id="@+id/textCopy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:fontFamily="@font/bold"
            android:layout_marginBottom="20dp" />
    </LinearLayout>
</ScrollView>