<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="LOAD CUSTOMER DATA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:singleLine="true"
            android:ellipsize="end"
            android:textStyle="bold"
            android:fontFamily="@font/medium"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/close_button"/>
        <ImageView
            android:id="@+id/close_button"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:padding="4dp"
            android:src="@drawable/ic_baseline_close_24"/>
    </RelativeLayout>

    <View
        android:background="@color/gray_080"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="5dp"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="55dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:hint="@string/distribution">
        <co.id.cpn.bdmgafi.util_view.DistributionDropdown
            android:id="@+id/distribution_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/dropDownStyle" />
    </com.google.android.material.textfield.TextInputLayout>
    
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="55dp"
        android:layout_marginBottom="250dp"
        android:hint="@string/region">
        <co.id.cpn.bdmgafi.util_view.RegionDropdown
            android:id="@+id/region_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/dropDownStyle" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/actionLayout"
        android:weightSum="2"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            android:layout_weight="1"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/gray_200"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:fontFamily="@font/bold"
            app:cornerRadius="@dimen/button_corner_radius"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:text="@string/cancel"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/process_button"
            android:layout_weight="1"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:layout_marginEnd="16dp"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:singleLine="true"
            android:fontFamily="@font/bold"
            android:text="Process"
            app:cornerRadius="@dimen/button_corner_radius"/>
        
    </LinearLayout>
    
</LinearLayout>